Refactor audio, logging, deps & dead code cleanup
Broad cleanup and refactor across modules:

- Build/deps: audio/build.gradle.kts - include simp3 sources via sourceSet include, add platform-detected JavaFX dependency and several libraries (Jackson, jaudiotagger).

- Logging: Convert many java.util.logging calls to supplier lambdas for lazy message construction across audio services and utilities.

- Audio engine changes: HybridAudioEngine and JavaZoomAudioEngine adjustments (removed/cleaned unused fields, suppressed raw-type warnings, removed redundant state tracking, updated properties/volume handling and lifecycle logging). AudioConversionService: cleaned imports, removed unused helpers, improved logging lambdas, metadata copy logging, and small restructuring.

- UpdateService: use URI.create(...).toURL() for URL construction and removed reliance on unused user.home retrieval.

- UI / controllers / editor: removed unused imports, fields and deprecated helper methods across AlbumCard, AudioVisualizer, MainController, PlaybackController, AudioConversionDialog, ConversionPromptDialog and EditorApp; reduced visual transition and album-art helper code; removed AudioVisualizer write index and other dead code.

- VN/parser and core: simplified VnScriptParser label registration and removed unused inner classes/fields; various removed unused fields/methods in SettingsScene, MenuButtonLayoutLoader, CombatInteractionSystem, VnScenarioBuilder, TextParser and others.

- Tests: updated imports and removed unused counters/fields to match refactor (TimelineParityTest, EngineAdvancedLoopTest, VnPhoneCommandsTest, SceneManagerLifecycleTest, DefaultVnInteropQuotedArgsTest).

These changes reduce dead code, improve logging performance, unify dependency management for JavaFX, and tidy imports/usages across the project.